--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@angular/router": "^16.0.0",
     "@capacitor/app": "5.0.6",
     "@capacitor/core": "5.2.3",
+    "@capacitor/geolocation": "^5.0.6",
+    "@capacitor/google-maps": "^5.3.3",
     "@capacitor/haptics": "5.0.6",
     "@capacitor/keyboard": "5.0.6",
     "@capacitor/splash-screen": "^5.0.6",
