--- a/package.json
+++ b/package.json
@@ -30,10 +30,12 @@
     "@capacitor/keyboard": "5.0.6",
     "@capacitor/splash-screen": "^5.0.6",
     "@capacitor/status-bar": "5.0.6",
+    "@ionic-native/call-number": "^5.36.0",
+    "@ionic-native/core": "^5.36.0",
     "@ionic/angular": "^7.0.0",
     "ionicons": "^7.0.0",
-    "rxjs": "~7.8.0",
-    "sweetalert2": "^11.7.22",
+    "rxjs": "^6.5.0",
+    "sweetalert2": "^11.6.13",
     "tslib": "^2.6.1",
     "zone.js": "~0.13.0"
   },
@@ -50,6 +52,7 @@
     "@angular/language-service": "^16.0.0",
     "@capacitor/cli": "5.2.3",
     "@ionic/angular-toolkit": "^9.0.0",
+    "@ionic/lab": "3.2.15",
     "@types/jasmine": "~4.3.0",
     "@types/node": "^12.11.1",
     "@typescript-eslint/eslint-plugin": "5.3.0",
